--- a/style.css
+++ b/style.css
@@ -38,6 +38,8 @@ h1{
     height: 100%;
     background: #fff;
     border-radius: 20px;
+    padding: 0.5rem;
+    box-shadow: rgba(0, 0, 0, 0.206) 10px 10px;
 }
 
 .container .player-container .album-image{
@@ -45,7 +47,7 @@ h1{
     width: 70%;
     height: 70%;
     background-size: cover;
-    margin-top: 1rem;
+    margin-top: 2rem;
 }
 
 .container .player-container .album-title{
@@ -64,7 +66,21 @@ h1{
 
 .container .player-container .album-title .sub-title {
     font-size: 0.7rem;
-    align-self: flex-start;
+    /* align-self: flex-start; */
     text-transform: capitalize;
     color: grey;
+}
+
+.container .player-container .directions{
+    font-size: 2rem;
+    margin-bottom: 1rem;
+    width: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.container .player-container .directions i:hover{
+    opacity: 0.5;
+    cursor: pointer;
 }
