--- a/style.css
+++ b/style.css
@@ -84,3 +84,70 @@ h1{
     opacity: 0.5;
     cursor: pointer;
 }
+
+@media (min-width: 1200px) {
+    .container{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .container .player-container {
+        width: 60%;
+    }
+}
+
+@media (max-width: 1500px) {
+    .container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .container .player-container {
+        width: 90%;
+    }
+}
+
+@media (max-width: 1000px) {
+    .container{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 40%;
+    }
+}
+
+@media (max-width: 700px) {
+    .container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 50%;
+    }
+}
+
+@media (max-width: 500px) {
+    .container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 70%;
+    }
+    h1{
+        font-size: 2.5rem;
+    }
+}
+
+@media (max-width: 400px) {
+    .container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 80%;
+    }
+}
+
+@media (max-width: 400px) {
+    h1{
+        font-size: 2rem;
+    }
+}
