--- a/style.css
+++ b/style.css
@@ -24,6 +24,49 @@ h1{
     font-size: 3rem;
 }
 
+.modal-album-info{
+    width: 100% !important;
+    height: 100vh !important;
+    z-index: 9999;
+    position: absolute;
+    top: 1;
+    background: #00000093;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    text-overflow: auto;
+}
+
+.modal-album-info .modal-content{
+    background: #fff;
+    width: 50%;
+    height: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 3rem;
+    text-overflow: auto;
+}
+.modal-album-info .modal-content .content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-overflow: auto;
+    justify-content: center;
+}
+.modal-album-info .modal-content .content h2{
+    text-transform: capitalize;
+}
+.modal-album-info .modal-content .content p, .modal-album-info .modal-content .content li{
+    font-size: 0.7rem;
+    padding: 1px;
+}
+
+.modal-album-info .modal-content .content p{
+    align-self: baseline;
+    font-weight: 500;
+}
+
 .container{
     width: 30%;
     height: 70%;
@@ -80,6 +123,11 @@ h1{
     background-size: cover;
     margin-top: 2rem;
     background-position: center;
+}
+
+.container .player-container .album-image:hover{
+    opacity: 0.8;
+    cursor: pointer;
 }
 
 .container .player-container .album-title{
